--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
